<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/ic_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home"/>

    <item
        android:id="@+id/ic_restaurant_menu"
        android:icon="@drawable/ic_restaurant_menu"
        android:title="@string/menu"/>

    <item
        android:id="@+id/ic_search_menu"
        android:icon="@drawable/ic_search_menu"
        android:title="@string/search"/>

    <item
        android:id="@+id/ic_create_set"
        android:icon="@drawable/ic_create_set"
        android:title="@string/create"/>

    <item
        android:id="@+id/ic_favorites"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorites"/>

</menu>