<?xml version="1.0" encoding="utf-8"?>
<!--<layout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    tools:context=".fragments.home.HomeFragment">-->

<!--    <data>-->
<!--        <variable-->
<!--            name="homeFragment"-->
<!--            type="com.amwms.food4u.fragments.home.HomeFragment" />-->
<!--    </data>-->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.home.HomeFragment" >

    <TextView
        android:id="@+id/home_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/home"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5" />

    <TextView
        android:id="@+id/chosen_country_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chosen_country"
        android:textSize="16sp"
        android:padding="10dp"

        app:layout_constraintTop_toBottomOf="@id/home_header"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/chosen_restaurant_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chosen_restaurant"
        android:textSize="16sp"
        android:padding="10dp"

        app:layout_constraintTop_toBottomOf="@id/chosen_country_text_view"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/change_restaurant_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/change_restaurant"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>