<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SearchMenuFragment">

    <TextView
        android:id="@+id/search_menu_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/search_menu"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5" />

    <TextView
        android:id="@+id/select_allergens_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@android:drawable/editbox_background"
        android:drawablePadding="16dp"
        android:hint="@string/select_allergens"
        android:padding="12dp"
        app:drawableRightCompat="@android:drawable/arrow_down_float"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_menu_header"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/maximum_calories_field"
        android:layout_width="225dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"

        android:hint="@string/maximum_calories_label"

        app:layout_constraintTop_toBottomOf="@+id/select_allergens_text_view"
        app:layout_constraintLeft_toLeftOf="parent"
        >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/maximum_calories_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:padding="11dp"
        android:textSize="12sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/minimum_calories_field"
        android:layout_width="225dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"

        android:hint="@string/minimum_calories_label"

        app:layout_constraintTop_toBottomOf="@id/maximum_calories_field"
        app:layout_constraintLeft_toLeftOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/minimum_calories_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:padding="11dp"
            android:textSize="12sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/search_menu_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minimum_calories_field"

        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_menu_submit_button"

        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>