<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CreateSetFragment">

    <TextView
        android:id="@+id/create_set_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/create_set"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5" />

    <TextView
        android:id="@+id/select_allergens_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@android:drawable/editbox_background"
        android:drawablePadding="16dp"
        android:hint="@string/select_allergens"
        android:padding="12dp"
        app:drawableRightCompat="@android:drawable/arrow_down_float"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_set_header"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/maximum_calories_field"
        android:layout_width="150dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"

        android:hint="@string/maximum_calories_label"

        app:layout_constraintTop_toBottomOf="@+id/select_allergens_text_view"
        app:layout_constraintLeft_toLeftOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/maximum_calories_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="12sp"
            android:maxLength="9" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/minimum_calories_field"
        android:layout_width="150dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"

        android:hint="@string/minimum_calories_label"

        app:layout_constraintTop_toBottomOf="@id/select_allergens_text_view"
        app:layout_constraintLeft_toRightOf="@id/maximum_calories_field"
        app:layout_constraintRight_toRightOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/minimum_calories_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="12sp"
            android:maxLength="9" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/slider_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_sets"
        android:textSize="12sp"

        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"

        app:layout_constraintTop_toBottomOf="@id/maximum_calories_field"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.slider.Slider
        android:id="@+id/sets_number_slider"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/number_of_sets"

        android:valueFrom="1.0"
        android:valueTo="10.0"
        android:stepSize="1.0"

        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/slider_description" />

    <Button
        android:id="@+id/create_set_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_set"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/slider_description"

        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_set_submit_button"

        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>