<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SetFragment">

    <TextView
        android:id="@+id/set_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:padding="10dp"
        android:text="@string/set"
        android:textSize="25sp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/divider_top"
        app:layout_constraintWidth_percent="0.5" />

    <View
        android:id="@+id/divider_top"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"

        app:layout_constraintEnd_toEndOf="@id/recycler_view"
        app:layout_constraintStart_toStartOf="@id/recycler_view"
        app:layout_constraintTop_toBottomOf="@+id/set_header"
        app:layout_constraintBottom_toTopOf="@+id/set_calories_header"

        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" />

    <TextView
        android:id="@+id/set_calories_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/calories_in_set"
        android:textSize="14sp"

        app:layout_constraintEnd_toStartOf="@+id/set_calories"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_top"
        app:layout_constraintBottom_toTopOf="@+id/divider_bottom"
        app:layout_constraintWidth_percent="0.5" />

    <TextView
        android:id="@+id/set_calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="5dp"
        android:text="@string/set"
        android:textSize="16sp"

        app:layout_constraintEnd_toStartOf="@id/calories_type"
        app:layout_constraintTop_toTopOf="@+id/set_calories_header"
        app:layout_constraintBottom_toBottomOf="@+id/set_calories_header"
        app:layout_constraintWidth_percent="0.5" />

    <TextView
        android:id="@+id/calories_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/kcal"
        android:textSize="16sp"

        app:layout_constraintBottom_toBottomOf="@+id/set_calories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/set_header"
        app:layout_constraintTop_toTopOf="@+id/set_calories"
        app:layout_constraintWidth_percent="0.5" />

    <View
        android:id="@+id/divider_bottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"

        app:layout_constraintEnd_toEndOf="@id/recycler_view"
        app:layout_constraintStart_toStartOf="@id/recycler_view"
        app:layout_constraintTop_toBottomOf="@+id/set_calories_header"
        app:layout_constraintBottom_toTopOf="@+id/recycler_view"

        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/set_calories"

        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />


</androidx.constraintlayout.widget.ConstraintLayout>